@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+	- Remove `parse` method
+	- Add `from_string` method
+
 0.001 2019-03-10T16:03:42Z
 
 	- Inital release.
